objects/CN_Price_Book_Setting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CN_Price_Book1__c</fullName>
        <label>Price Book 0000900012</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Price_Book2__c</fullName>
        <label>Price Book 0000900013</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Price_Book3__c</fullName>
        <label>Price Book 0000900014</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Price Book Setting</label>
</CustomObject>